--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Reversi</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="reset">RESET</string>
+    <string name="reset">RETURN</string>
     <string name="ustawienia">USTAWIENIA</string>
     <string name="nowa_gra">NOWA GRA</string>
     <string name="WYJŚCIE">exit</string>
