--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="reset">RETURN</string>
     <string name="ustawienia">USTAWIENIA</string>
-    <string name="nowa_gra">NOWA GRA</string>
+    <string name="start_1_player">ONE PLAYERS</string>
+    <string name="start_2_player">TWO PLAYERS</string>
     <string name="WYJŚCIE">exit</string>
 </resources>
