--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="start_1_player">ONE PLAYERS</string>
     <string name="start_2_player">TWO PLAYERS</string>
     <string name="WYJŚCIE">exit</string>
+    <string name="TOURNAMENT">TOURNAMENT</string>
 </resources>
