--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="reset">RETURN</string>
-    <string name="ustawienia">USTAWIENIA</string>
-    <string name="start_1_player">ONE PLAYERS</string>
+    <string name="ustawienia">SETTINGS</string>
+    <string name="start_1_player">ONE PLAYER</string>
     <string name="start_2_player">TWO PLAYERS</string>
-    <string name="WYJŚCIE">exit</string>
+    <string name="WYJŚCIE">EXIT</string>
     <string name="TOURNAMENT">TOURNAMENT</string>
 </resources>
